# ghatest

./: .gitignore  flake.nix  pyproject.toml  vsay.py  vserver.py
.github/workflows/: release.yml
src/gsay/: __init__.py  __main__.py  glisten.py  gsay.py  gserver.py
